--- a/src/styles.css
+++ b/src/styles.css
@@ -42,21 +42,6 @@ article {
     right: 0;
     bottom: 0;
     overflow-y: scroll;
-
-    &::-webkit-scrollbar {
-        width: 10px;
-    }
-
-    /* The draggable handle */
-    &::-webkit-scrollbar-thumb {
-        background-color: #888;
-        border-radius: 5px;
-    }
-
-    /* The track (background) */
-    &::-webkit-scrollbar-track {
-        background-color: #f1f1f1;
-    }
 }
 /* endregion */
 
